sbatch/028_train-median-background-convnet/slurm/slurm_028_T-3600_unit02_3140882.out
  File "../../../src/028_train-median-background-convnet.py", line 140
    with h5py.File(tfr_path, "r") as tfr_container,
                                                  ^
SyntaxError: invalid syntax
